<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="card_types">
        <item>Visa</item>
        <item>MasterCard</item>
    </string-array>
    
    <string-array name="tickets_quantity">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="app_name">BusTicketPassenger</string>
    <string name="action_settings">Settings</string>
    <string name="label_login_username">Username</string>
    <string name="hint_login_username">Username</string>
    <string name="label_login_password">Password</string>
    <string name="hint_login_password">Password</string>
    <string name="label_register_username">Username</string>
    <string name="hint_register_username">Username</string>
    <string name="label_register_password">Password</string>
    <string name="hint_register_password">Password</string>
    <string name="buttontext_login">Login</string>
    <string name="buttontext_register">Register</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_register_name">Name</string>
    <string name="hint_register_name">Name</string>
    <string name="label_register_card_type">Card Type</string>
    <string name="label_register_card_number">Card Number</string>
    <string name="hint_register_card_number">Card Number</string>
    <string name="label_register_card_validity">Card Validity</string>
    <string name="label_buy_tickets">Buy Tickets</string>
    <string name="label_type">Type</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_t1">T1</string>
    <string name="title_activity_buy">BuyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_change">Change</string>
    <string name="label_t2">T2</string>
    <string name="label_t3">T3</string>
    <string name="buy">Buy</string>
    <string name="title_activity_view_tickets">ViewTicketsActivity</string>
    <string name="title_activity_tickets">TicketsActivity</string>

</resources>
