<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef" >

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dp" >

	<LinearLayout
	    android:id="@+id/login_wrapper"
	    android:layout_width="200dp"
	    android:layout_height="100dp"
	    android:background="#ffffff"
	    android:orientation="vertical" >

        <EditText
            android:id="@+id/edittext_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login_username"
            android:lines="1" />

        <EditText
            android:id="@+id/edittext_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login_password"
            android:inputType="textPassword"
            android:lines="1"
            android:text="Password" />

       
		</LinearLayout>
		
		<RelativeLayout
		    android:layout_width="200dp"
		    android:layout_height="40dp"
		    android:layout_marginBottom="10dp"
		    android:background="#aeaeae" >

        <TextView
            android:id="@+id/login_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/label_login"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="12pt" />

        </RelativeLayout>
		
		<LinearLayout
		    android:id="@+id/register_wrapper"
		    android:layout_width="200dp"
		    android:layout_height="0dp"
		    android:background="#ffffff"
		    android:orientation="vertical" >

        >

        

        <EditText
            android:id="@+id/edittext_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_register_username"
            android:lines="1" />

        <EditText
            android:id="@+id/edittext_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_register_password"
            android:inputType="textPassword"
            android:lines="1" />

        <EditText
            android:id="@+id/edittext_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_register_name"
            android:lines="1" />

        <Spinner
            android:id="@+id/spinner_register_card_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edittext_register_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_register_card_number"
            android:inputType="number"
            android:lines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_register_card_validity" />

        <DatePicker
            android:id="@+id/datepicker_register_card_validity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false" />
    </LinearLayout>
    	
		<RelativeLayout
		    android:layout_width="200dp"
		    android:layout_height="40dp"
		    android:layout_marginTop="10dp"
		    android:background="#aeaeae" >
	
		<TextView
            android:id="@+id/register_header"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/label_register"
            android:textColor="#ffffff"
            android:textSize="12pt" />
		</RelativeLayout>	
    </LinearLayout>
	
</RelativeLayout>